--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,6 +1,13 @@
 .hero-container {
     /* background: url('images/img-home.jpg') center center/cover
     no-repeat; */ 
-
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    box-shadow: inset 0 0 0 100px rgba(0,0,0,0.2);
+    object-fit: contain;
+    background-color: white;
 
 }
