--- a/src/Components/HeroSection.css
+++ b/src/Components/HeroSection.css
@@ -8,6 +8,7 @@
     list-style: none;
 
 
+
 }
 
 
@@ -17,13 +18,22 @@
     display: flex;
     flex-direction: column;
     align-items: left;
+    padding-top: 300px;
+    padding-left: 150px;
     object-fit: contain;
     background-image: url("./../images/landingpage.png")
+
 }
 
 .hero-container > h1 {
     color: rgb(208, 71, 103);
-    font-size: 40px;
+    font-size: 50px;
+
+
+}
+
+.hero-container > p {
+    font-size: 30px;
 
 
 }
