--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  height: 100%;
 }
 
 .App-logo {
@@ -37,7 +38,26 @@
   }
 }
 
+h1{
+  padding-bottom: 10px;
+  background-color: -webkit-linear-gradient(-45deg, #000000, #4F7467);
+  color: transparent;
+  -webkit-background-clip: text;
+}
+#formLogo{
+  height: 8vh;
+  width: 8vh;
+  border: 1px solid violet;
+}
+
+#loginTextDiv{
+  background: -webkit-linear-gradient(-45deg, red, green, blue, orange);
+  -webkit-background-clip: text;
+  width: 50%;
+}
+
 .Login-form {
+  width: 100%;
   display: flex; 
   flex-direction: column;
   align-items: center;
@@ -46,53 +66,113 @@
   gap: 30px;
 }
 
+.LoginHeader{
+  width:100%;
+  height: 10vh;
+  border: 1px solid red;
+}
+
+#LoginFormDiv{
+  background-color: white;
+}
+.LoginBody{
+  width: 100%;
+  height: 90vh;
+  border: 1px solid green;
+  background: -webkit-linear-gradient(-45deg, #000000, #4F7467)
+}
+
+#LoginLogo{
+  width: 10%;
+  height: 8vh;
+  margin-top: 1vh;
+  margin-left: 100px;
+  border: 1px solid green;
+  float: left;
+}
+
+#LoginSigninButton{
+  width: 15%;
+  height: 8vh;
+  margin-top: 1vh;
+  border: 1px solid orange;
+  float: left;
+  margin-left: 60vw;
+}
+
 .Sign-In-Text {
   text-align: left;
-  width: 55%;
+  width: 100%;
   margin-top: 0;
   
   margin-bottom: 10px;
   font-size: small;
 }
 
+#signInTextDiv{
+  text-align:left;
+  width: 100%;
+}
+
 .LoginContainer2 {
-  display: flex; 
+  /* display: flex;  */
   flex-direction: column;
   align-items: center;
   text-align: left;
+  width: 100%;
+}
+
+.LoginContainer{
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
 }
 
 .Email-Text {
+  font-weight: bold;
   text-align: left;
-  width: 320px;
+  width: 100%;
   font-size: small;
-  padding: 8px;
+
+  padding-top: -8px;
+  margin-top: -8px;
+  
+}
+
+#LoginFormDiv{
+  padding: 20px;
+  margin: auto;
+  margin-top: 10vh;
+  border-radius: 20px;
+  border: 1px solid green;
+  width: 25%;
   
 }
 
 .Log-In {
   text-align: left;
-  width: 320px;
-  margin-bottom: 5px; 
+  margin-bottom: 5px;  
   font-size: xx-large;
 }
 
 .input, .pass {
+  margin-top: 8px;
   order: none;
   -webkit-appearance: none;
   -ms-appearance: none;
   -moz-appearance: none;
   appearance: none;
   background: #ffffff; 
-  padding: 8px;
+  padding-top: 8px;
+  padding-bottom: 8px;
   border-radius: 8px;
-  width: 300px;
+  width: 98%;
   font-size: 14px;
 }
 
 .EmailButton, .GoogleButton {
   padding: 7px;
-  width: 320px;
+  width: 100%;
   border-radius: 8px;
   background: #ffffff; 
 }
